Move ThemeToggle to separate class, style it, and fix it on mobile

--- a/app/styles/components/sidebar-menu.scss
+++ b/app/styles/components/sidebar-menu.scss
@@ -161,6 +161,10 @@
     margin-right: 10px;
   }
 
+  &.theme-toggle {
+    padding-top: 0;
+  }
+
   &:hover {
     &__title {
       color: var(--primary-text-color);
