--- a/app/styles/components/tabs-bar.scss
+++ b/app/styles/components/tabs-bar.scss
@@ -111,14 +111,6 @@
     }
   }
 
-  &__button-theme-toggle {
-    margin-left: 10px;
-    padding: 0 10px;
-    font-size: 20px;
-
-    .fa { margin-right: 0; }
-  }
-
   &__button-compose {
     display: block;
     @media screen and (max-width: $nav-breakpoint-3) {display: none;}
@@ -149,22 +141,20 @@
     display: flex;
   }
 
-  .setting-toggle {
-    margin-top: 5px;
-    margin-left: 10px;
+  .theme-toggle {
+    @media screen and (max-width: $nav-breakpoint-3) {display: none;}
 
-    .react-toggle-track-check,
-    .react-toggle-track-x {
-      height: 15px;
-      color: #fff;
-    }
+    .setting-toggle {
+      margin-top: 3px;
+      margin-left: 10px;
 
-    .react-toggle--checked {
-      .react-toggle-track {
-        background-color: var(--accent-color);
-      }
-      &:hover:not(.react-toggle--disabled) .react-toggle-track {
-        background-color: var(--accent-color--bright);
+      .react-toggle--checked {
+        .react-toggle-track {
+          background-color: var(--accent-color);
+        }
+        &:hover:not(.react-toggle--disabled) .react-toggle-track {
+          background-color: var(--accent-color--bright);
+        }
       }
     }
   }
